<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <RadioGroup
        android1:id="@+id/directorySelector"
        android1:layout_width="fill_parent"
        android1:layout_height="wrap_content"
        android1:gravity="center_horizontal"
        android1:orientation="horizontal" >

        <RadioButton
            android1:id="@+id/root"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_marginRight="10dp"
            android1:checked="true"
            android1:text="@string/root" />

        <RadioButton
            android1:id="@+id/sdCard"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_marginLeft="10dp"
            android1:text="@string/sdCard" />

    </RadioGroup>

    <Button
        android1:id="@+id/parcourir"
        android1:layout_width="fill_parent"
        android1:layout_height="wrap_content"
        android1:text="@string/parcourir" />

    <LinearLayout
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content" >

        <TextView
            android1:id="@+id/nameText"
            android1:layout_width="wrap_content"
            android1:layout_height="match_parent"
            android1:layout_gravity="center_vertical"
            android1:gravity="center"
            android1:text="@string/nameText" />

        <EditText
            android1:id="@+id/chemin"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_weight="1"
            android1:ems="10"
            android1:inputType="none" >

            <requestFocus />
        </EditText>

    </LinearLayout>

        <LinearLayout
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content" >

        <TextView
            android1:id="@+id/sizeText"
            android1:layout_width="wrap_content"
            android1:layout_height="match_parent"
            android1:layout_gravity="center_vertical"
            android1:gravity="center"
            android1:text="@string/sizeText" />

        <EditText
            android1:id="@+id/size"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_weight="1"
            android1:ems="10"
            android1:inputType="none" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
    <LinearLayout
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:gravity="center" >

        <CheckBox
            android1:id="@+id/readable"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:clickable="false"
            android1:text="@string/isReadableText" />

        <CheckBox
            android1:id="@+id/writable"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:clickable="false"
            android1:text="@string/isWritableText" />
        <CheckBox
            android1:id="@+id/executable"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:clickable="false"
            android1:text="@string/isExecutableText" />
    </LinearLayout>

    <CheckBox
        android1:id="@+id/hidden"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_gravity="center"
        android1:clickable="false"
        android1:text="@string/isHiddenText" />
        
</LinearLayout>